Migrate from json to protobuf