@@ -1,6 +1,9 @@
 package net.evendanan.bazel.mvn.merger;
 
 import com.google.common.annotations.VisibleForTesting;
+import net.evendanan.bazel.mvn.api.Dependency;
+import net.evendanan.bazel.mvn.api.DependencyTools;
+
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
@@ -10,27 +13,28 @@ import java.net.URL;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
 import java.nio.file.Files;
-import net.evendanan.bazel.mvn.api.Dependency;
 
 import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 
 public class ArtifactDownloader {
 
-    private final ConnectionOpener mConnectionOpenner;
-    private final File artifactsFolder;
+    private final ConnectionOpener mConnectionOpener;
+    private final File mArtifactsFolder;
+    private final DependencyTools mDependencyTools;
 
-    public ArtifactDownloader(File artifactsFolder) {
-        this(URL::openStream, artifactsFolder);
+    public ArtifactDownloader(File artifactsFolder, DependencyTools dependencyTools) {
+        this(URL::openStream, artifactsFolder, dependencyTools);
     }
 
     @VisibleForTesting
-    ArtifactDownloader(ConnectionOpener opener, File artifactsFolder) {
-        mConnectionOpenner = opener;
-        this.artifactsFolder = artifactsFolder;
+    ArtifactDownloader(ConnectionOpener opener, File artifactsFolder, DependencyTools dependencyTools) {
+        mConnectionOpener = opener;
+        mArtifactsFolder = artifactsFolder;
+        mDependencyTools = dependencyTools;
     }
 
     public URI getLocalUriForDependency(Dependency dependency) throws IOException {
-        final File localPath = new File(artifactsFolder, dependency.repositoryRuleName());
+        final File localPath = new File(mArtifactsFolder, mDependencyTools.repositoryRuleName(dependency));
         //first, is the file exists locally already?
         if (localPath.exists() && localPath.isFile()) {
             return localPath.toURI();
@@ -38,7 +42,7 @@ public class ArtifactDownloader {
 
         //second, download to unique temp file
         final File tempDownloadFile = File.createTempFile("mabel_ArtifactDownloader", localPath.getName());
-        try (final ReadableByteChannel readableByteChannel = Channels.newChannel(mConnectionOpenner.openInputStream(dependency.url().toURL()))) {
+        try (final ReadableByteChannel readableByteChannel = Channels.newChannel(mConnectionOpener.openInputStream(new URL(dependency.getUrl())))) {
             try (final FileOutputStream tempOutput = new FileOutputStream(tempDownloadFile, false)) {
                 tempOutput.getChannel().transferFrom(readableByteChannel, 0, Long.MAX_VALUE);
             }
